--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,22 +1,22 @@
-name: Run Scrap_P script
+name: Run Python Script
 
 on:
+  workflow_dispatch:   # bisa dijalankan manual
   schedule:
-    - cron: "0 * * * *"   # jalan setiap jam
-  workflow_dispatch:      # bisa dijalankan manual dari GitHub
+    - cron: "0 0 * * *"   # jalan otomatis tiap hari jam 00:00 UTC
 
 jobs:
   run-python:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -26,3 +26,10 @@ jobs:
         run: |
           python run.py
 
+      - name: Commit and push results
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add *.csv
+          git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
+          git push
