--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "0 0 * * *"   # jalan otomatis tiap hari jam 00:00 UTC
 
+permissions:
+  contents: write   # 👈 wajib supaya bisa git push
+
 jobs:
   run-python:
     runs-on: ubuntu-latest
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}   # default token
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -19,17 +24,18 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run script
-        run: |
-          python run.py
+        run: python run.py
 
       - name: Commit and push results
+        env:
+          GIT_AUTHOR_NAME: "github-actions[bot]"
+          GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
+          GIT_COMMITTER_NAME: "github-actions[bot]"
+          GIT_COMMITTER_EMAIL: "github-actions[bot]@users.noreply.github.com"
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add *.csv
           git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
           git push
