--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,12 +1,9 @@
 name: Run Python Script
 
 on:
-  workflow_dispatch:   # bisa dijalankan manual
+  workflow_dispatch:   # Trigger manually
   schedule:
-    - cron: "0 0 * * *"   # jalan otomatis tiap hari jam 00:00 UTC
-
-permissions:
-  contents: write   # 👈 wajib supaya bisa git push
+    - cron: "0 0 * * *"   # Automatically run daily at 00:00 UTC
 
 jobs:
   run-python:
@@ -15,8 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}   # default token
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,20 +19,17 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
 
       - name: Run script
-        run: python run.py
+        run: |
+          python run.py
 
       - name: Commit and push results
-        env:
-          GIT_AUTHOR_NAME: "github-actions[bot]"
-          GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
-          GIT_COMMITTER_NAME: "github-actions[bot]"
-          GIT_COMMITTER_EMAIL: "github-actions[bot]@users.noreply.github.com"
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add *.csv
           git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+          git push
