--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,35 +1,35 @@
-name: Run Python Script
+name: Update gabung.csv
 
 on:
-  workflow_dispatch:   # bisa dijalankan manual
   schedule:
-    - cron: "0 0 * * *"   # jalan otomatis tiap hari jam 00:00 UTC
+    - cron: "0 0 * * *"   # jalan otomatis tiap jam 00:00 UTC
+  workflow_dispatch:       # bisa manual jalanin workflow
 
 jobs:
-  run-python:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run script
-        run: |
-          python run.py
+      - name: Run pipeline
+        run: python run.py
 
-      - name: Commit and push results
+      - name: Commit and push gabung.csv
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add *.csv
-          git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
+          git add gabung.csv
+          git commit -m "Update gabung.csv [skip ci]" || echo "No changes to commit"
           git push
