--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -31,5 +31,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add gabung.csv
-          git commit -m "Update gabung.csv [skip ci]" || echo "No changes to commit"
+          git commit -m "Update gabung.csv" || echo "No changes to commit"
           git push
