--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -37,4 +37,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add gabung.csv trafik.csv
           git commit -m "Update gabung.csv and trafik.csv" || echo "No changes to commit"
+          git pull --rebase origin main
           git push origin HEAD:main
