--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git pull --rebase --autostash origin main
           git add gabung.csv trafik.csv
           git commit -m "Update gabung.csv and trafik.csv" || echo "No changes to commit"
-          git pull --rebase origin main
-          git push origin HEAD:main
+          git push origin main
