Push project OUTALL ke repo outstanding

--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,4 +1,4 @@
-name: Update gabung.csv and trafik.csv
+name: Update gabung.csv
 
 on:
   schedule:
@@ -31,11 +31,11 @@ jobs:
       - name: Debug changed files
         run: git status
 
-      - name: Commit and push gabung.csv and trafik.csv
+      - name: Commit and push gabung.csv
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git pull --rebase --autostash origin main
-          git add gabung.csv trafik.csv
-          git commit -m "Update gabung.csv and trafik.csv" || echo "No changes to commit"
+          git add gabung.csv
+          git commit -m "Update gabung.csv" || echo "No changes to commit"
           git push origin main
