--- a/run-script.yml
+++ b/run-script.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Run script
         run: |
-          python run.py
+          python scripts/run.py
 
       - name: Commit and push results
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add *.csv
+          git add data/*.csv
           git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
           git push
