🔄 Revert to original root folder structure for Netlify compatibility
✅ MAJOR RESTRUCTURING REVERSAL:
- Moved all HTML files back to root directory from web/
- Moved all CSV files back to root directory from data/
- Moved all Python files back to root directory from scripts/
- Removed organized folder structure (web/, data/, scripts/, config/)

✅ PATH UPDATES:
- Updated all Python files to use root directory paths
- Updated all HTML files to reference root-level CSV files
- Updated GitHub Actions workflows for root structure
- Removed data/ and assets/ path references in HTML

✅ NETLIFY DEPLOYMENT FIX:
- Restored original flat structure for better Netlify compatibility
- All files now accessible directly from root URL path
- Removed netlify.toml and complex build configurations
- Simplified deployment structure for static hosting

✅ TECHNICAL CHANGES:
- bill.py, spb.py, wasop.py: Save CSV to root directory
- lookup.py: Use current directory instead of data/ folder
- lhgk.py, tug.py, run.py: Updated to root directory structure
- outstanding.html, bill.html: Updated CSV fetch paths
- GitHub Actions: Updated script and file paths

This reverts the project to its original working structure while maintaining
all functionality improvements and CSV parsing enhancements.

--- a/run-script.yml
+++ b/run-script.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Run script
         run: |
-          python scripts/run.py
+          python run.py
 
       - name: Commit and push results
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/*.csv
+          git add *.csv
           git commit -m "Update CSV hasil scraping [skip ci]" || echo "No changes to commit"
           git push
