--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -26,7 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run pipeline
-        run: python scripts/run.py
+        run: python run.py
 
       - name: Debug changed files
         run: git status
@@ -36,6 +36,6 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git pull --rebase --autostash origin main
-          git add data/gabung.csv
+          git add gabung.csv
           git commit -m "Update gabung.csv" || echo "No changes to commit"
           git push origin main
