--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,9 +25,12 @@
     ],
     "python.analysis.diagnosticSeverityOverrides": {
         "reportMissingModuleSource": "none",
-        "reportArgumentType": "warning",
-        "reportAttributeAccessIssue": "warning",
-        "reportOptionalMemberAccess": "warning"
+        "reportArgumentType": "none",
+        "reportAttributeAccessIssue": "none",
+        "reportOptionalMemberAccess": "none",
+        "reportUnknownMemberType": "none",
+        "reportUnknownParameterType": "none",
+        "reportUnknownVariableType": "none"
     },
     "files.exclude": {
         "**/__pycache__": true,
